Fix viewport height issue on iOS

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,7 @@ html{
 }
 
 body {
-    height: 100%;
+    
     width: 100vw;
     position: fixed;
     display: flex;
@@ -29,7 +29,7 @@ body {
 }
 
 #root{
-    height: 100vh;
+    
     width: 100vw;
     display: flex;
     flex-direction: column;
@@ -39,7 +39,7 @@ body {
 
 .container{
    display: grid;
-   height: 100%;
+   
    width: 100vw;
    max-width: 640px;
    grid-template-rows: 85% 15%;
